--- a/contracts/vault/Cargo.toml
+++ b/contracts/vault/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "celer-signers"
+name = "vault"
 version = "0.1.0"
 authors = ["Celer Network"]
-edition = "2021"
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -27,6 +27,7 @@ cosmwasm-storage = { version = "0.16.2" }
 cw-controllers = { version = "0.8.1" }
 cw-storage-plus = { version = "0.8.1" }
 cw2 = { version = "0.8.1" }
+cw20 = "0.8.1"
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
