--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,3 +6,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cosmwasm-std = { version = "0.16.2" }
+cosmwasm-storage = { version = "0.16.2" }
+cw-controllers = { version = "0.8.1" }
+cw-storage-plus = { version = "0.8.1" }
+cw2 = { version = "0.8.1" }
+cw20 = "0.8.1"
+schemars = "0.8.3"
+serde = { version = "1.0.127", default-features = false, features = ["derive"] }
+thiserror = { version = "1.0.26" }
+
+[dev-dependencies]
+cosmwasm-schema = { version = "0.16.2" }
