--- a/cowa-tmpl/Cargo.toml
+++ b/cowa-tmpl/Cargo.toml
@@ -31,5 +31,8 @@ schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
 
+# our own utils crate
+utils = { path = "../../utils", version = "0.1.0" }
+
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
