--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
 hex = "0.4"
 hex-literal = "0.3"
+rust-crypto = "0.2.36"
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
