--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = { version = "1.0.26" }
 hex = "0.4"
 hex-literal = "0.3"
 rust-crypto = "0.2.36"
+rustc-serialize = "0.3.24"
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
