--- a/contracts/vault/Cargo.toml
+++ b/contracts/vault/Cargo.toml
@@ -31,9 +31,15 @@ cw20 = "0.8.1"
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
+prost = "0.9"
+# Only necessary if using Protobuf well-known types:
+prost-types = "0.9"
 
 # our own utils crate
 utils = { path = "../../utils", version = "0.1.0" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
+
+[build-dependencies]
+prost-build = "0.9"
