--- a/contracts/vault/Cargo.toml
+++ b/contracts/vault/Cargo.toml
@@ -34,9 +34,11 @@ thiserror = { version = "1.0.26" }
 prost = "0.9"
 # Only necessary if using Protobuf well-known types:
 prost-types = "0.9"
+hex = "0.4"
 
 # our own utils crate
 utils = { path = "../../utils", version = "0.1.0" }
+bridge = { path = "../bridge", version = "0.1.0" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
