--- a/contracts/vault/Cargo.toml
+++ b/contracts/vault/Cargo.toml
@@ -30,6 +30,7 @@ cw2 = { version = "0.8.1" }
 cw20 = "0.8.1"
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
+serde-json-wasm = "0.3.2"
 thiserror = { version = "1.0.26" }
 prost = "0.9"
 # Only necessary if using Protobuf well-known types:
