--- a/contracts/token/Cargo.toml
+++ b/contracts/token/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pegbridge"
+name = "token"
 version = "0.1.0"
 authors = ["Celer Network"]
 edition = "2018"
@@ -27,21 +27,13 @@ cosmwasm-storage = { version = "0.16.2" }
 cw-controllers = { version = "0.8.1" }
 cw-storage-plus = { version = "0.8.1" }
 cw2 = { version = "0.8.1" }
-cw20 = "0.8.1"
+cw20-base = { version = "0.8.1", features = ["library"] }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
-prost = "0.9"
-# Only necessary if using Protobuf well-known types:
-prost-types = "0.9"
-hex = "0.4"
 
 # our own utils crate
 utils = { path = "../../utils", version = "0.1.0" }
-bridge = { path = "../bridge", version = "0.1.0" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
-
-[build-dependencies]
-prost-build = "0.9"
