--- a/contracts/vault/Cargo.toml
+++ b/contracts/vault/Cargo.toml
@@ -43,6 +43,7 @@ bridge = { path = "../bridge", version = "0.1.0" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
+getrandom = { version = "0.2", features = ["js"] }
 
 [build-dependencies]
 prost-build = "0.9"
