--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -18,8 +18,7 @@ serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
 hex = "0.4"
 hex-literal = "0.3"
-rust-crypto = "0.2.36"
-rustc-serialize = "0.3.24"
+sha3 = "0.10.1"
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
