--- a/contracts/token/Cargo.toml
+++ b/contracts/token/Cargo.toml
@@ -37,3 +37,4 @@ utils = { path = "../../utils", version = "0.1.0" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
+getrandom = { version = "0.2", features = ["js"] }
