--- a/contracts/pegbridge/Cargo.toml
+++ b/contracts/pegbridge/Cargo.toml
@@ -46,4 +46,4 @@ cosmwasm-schema = { version = "0.16.2" }
 getrandom = { version = "0.2", features = ["js"] }
 
 [build-dependencies]
-prost-build = "0.9"
+#prost-build = "0.9"
