--- a/contracts/pegbridge/Cargo.toml
+++ b/contracts/pegbridge/Cargo.toml
@@ -3,6 +3,7 @@ name = "pegbridge"
 version = "0.1.0"
 authors = ["Celer Network"]
 edition = "2018"
+resolver = "2"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -43,7 +44,6 @@ token = { path = "../token", version = "0.1.0", features = ["library"] }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "0.16.2" }
-getrandom = { version = "0.2", features = ["js"] }
 
 [build-dependencies]
 #prost-build = "0.9"
