--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -2,13 +2,13 @@
 name = "utils"
 version = "0.1.0"
 edition = "2018"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cosmwasm-std = { version = "0.16.2" }
 cosmwasm-storage = { version = "0.16.2" }
-cosmwasm-crypto = { version = "0.16.2" }
 cw-controllers = { version = "0.8.1" }
 cw-storage-plus = { version = "0.8.1" }
 cw2 = { version = "0.8.1" }
