--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -15,6 +15,7 @@ cw2 = { version = "0.8.1" }
 cw20 = "0.8.1"
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
+serde-json-wasm = "0.3.2"
 thiserror = { version = "1.0.26" }
 hex = "0.4"
 hex-literal = "0.3"
