--- a/contracts/bridge/Cargo.toml
+++ b/contracts/bridge/Cargo.toml
@@ -30,7 +30,9 @@ cw-storage-plus = { version = "0.8.1" }
 cw2 = { version = "0.8.1" }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
+serde-json-wasm = "0.3.2"
 thiserror = { version = "1.0.26" }
+hex = "0.4"
 
 # our own utils crate
 utils = { path = "../../utils", version = "0.1.0" }
