--- a/contracts/pegbridge/Cargo.toml
+++ b/contracts/pegbridge/Cargo.toml
@@ -41,6 +41,9 @@ hex = "0.4"
 utils = { path = "../../utils", version = "0.1.0" }
 token = { path = "../token", version = "0.1.0", features = ["library"] }
 
+sei-cosmwasm = { version = "0.4.10" }
+serde-json-wasm = "0.3.2"
+
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
 
