--- a/contracts/vault/Cargo.toml
+++ b/contracts/vault/Cargo.toml
@@ -40,6 +40,7 @@ hex = "0.4"
 
 # our own utils crate
 utils = { path = "../../utils", version = "0.1.0" }
+sei-cosmwasm = { version = "0.4.10" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
