--- a/contracts/token/Cargo.toml
+++ b/contracts/token/Cargo.toml
@@ -25,10 +25,12 @@ library = []
 [dependencies]
 cosmwasm-std = { version = "1.0.0" }
 cosmwasm-storage = { version = "1.0.0" }
-cw-controllers = { version = "0.13.2" }
-cw-storage-plus = { version = "0.13.2" }
-cw2 = { version = "0.13.2" }
-cw20-base = { version = "0.13.2", features = ["library"] }
+cw-controllers = { version = "1.0.1" }
+cw-storage-plus = { version = "1.0.1" }
+cw2 = { version = "1.0.1" }
+cw20-base = { version = "1.0.1", features = ["library"] }
+cw20 = { version = "1.0.1" }
+cw-utils = { version = "1.0.1" }
 schemars = "0.8.3"
 serde = { version = "1.0.127", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.26" }
