--- a/contracts/bridge/Cargo.toml
+++ b/contracts/bridge/Cargo.toml
@@ -39,3 +39,4 @@ utils = { path = "../../utils", version = "0.1.0" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
+libsecp256k1 = "0.7.1"
